<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MoodifyAI</string>
    <string name="signup_text1">Join MoodifyAI</string>
    <string name="signup_text2">Start Your Journey to Better Mental Health</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_an_acc">Already have an account?</string>
    <string name="dont_have_an_acc">Don\'t have an account?</string>
    <string name="signin">Sign in</string>
    <string name="continue_with">or continue with</string>
    <string name="signup">Sign up</string>
    <string name="splash_text">Mind meditation and brain relaxing stress free app</string>
    <string name="welcome">Welcome Back!</string>
    <string name="signin_text1">Sign in to Continue Your Wellness Journey</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_password_text">Forgot Your Password?</string>
    <string name="forget_password_text1">Enter the email address associated with your MoodifyAI account. We’ll send you an email to reset your password.</string>
    <string name="forget_password_text2">Your Registered Email</string>
    <string name="forget_password_btn_text">Reset Password</string>
    <string name="lets_started">Let\'s Get Started!</string>
    <string name="lets_dive_it">Let\'s dive in into your account</string>
    <string name="continue_google">Continue with Google</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_service">Terms of Service</string>
    <string name="all_set">You’re All Set!</string>
    <string name="success_password">Your password has been successfully updated</string>
    <string name="go_to_homepage">Go to Homepage</string>
    <string name="Continue">Continue</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="first_thing_first_what_should_we_call_you">First thing first, what should we call you?</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="help_us_understand_you_better_by_selecting_your_gender">Help us understand you better by selecting your gender</string>
    <string name="prefer_not_to_say">prefer not to say</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="your_age_help_us_tailor_our_recommendation_to_you">Your age help us tailor our recommendation to you</string>
    <string name="what_is_your_main_goal">What is your main goal?</string>
    <string name="select_the_option_that_best_represent_what_you_re_hoping_to_achieve_select_all_that_apply">Select the option that best represent what you’re hoping to achieve (select all that apply).</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="improve_mood">Improve Mood</string>
    <string name="manage_anxiety">Manage Anxiety</string>
    <string name="improve_sleep">Improve Sleep</string>
    <string name="enhance_relationship">Enhance Relationship</string>
    <string name="boost_confidence">Boost Confidence</string>
    <string name="work_college">Work/College</string>
    <string name="relationship">Relationship</string>
    <string name="finances">Finances</string>
    <string name="health_concerns">Health Concerns</string>
    <string name="life_changes">Life Changes</string>
    <string name="other">Other</string>
    <string name="what_cause_your_mental_health_issues">What cause your mental health issues?</string>
    <string name="what_factors_contribute_to_mental_health_issues_select_all_that_apply">What factors contribute to mental health issues? (select all that apply).</string>
    <string name="Rarely">Rarely</string>
    <string name="never">Never</string>
    <string name="occasionally">Occasionally</string>
    <string name="frequently">Frequently</string>
    <string name="almost_daily">Almost Daily</string>
    <string name="in_the_past_year_how_often_have_you_experienced_feelings_of_stress_or_anxiety">In the past year, how often have you experienced feelings of stress or anxiety?</string>
    <string name="how_often_did_you_feel_stressed_or_anxious_in_the_last_12_months">How often did you feel stressed or anxious in the last 12 months?</string>
    <string name="do_you_eat_healthily">Do you eat healthily?</string>
    <string name="how_would_you_describe_your_eating_habits_your_diet_can_impact_your_mental_well_being">How would you describe your eating habits? Your diet can impact your mental well-being.</string>
    <string name="always">Always</string>
    <string name="most_of_the_time">Most of the time</string>
    <string name="sometimes">Sometimes</string>
    <string name="have_you_ever_tried_meditation_before">Have you ever tried meditation before?</string>
    <string name="have_you_ever_practiced_meditation_or_mindfulness_techniques_before">Have you ever practiced meditation or mindfulness techniques before?</string>
    <string name="yes_regularly">Yes, regularly</string>
    <string name="yes_occasionally">Yes, occasionally</string>
    <string name="yes_a_long_time_ago">Yes, a long time ago</string>
    <string name="no_i_have_never_tried_meditation">No, I have never tried meditation</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="average">Average</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very Poor</string>
    <string name="how_would_you_rate_your_level_of_happiness_overall">How would you rate your level of happiness overall?</string>
    <string name="understanding_your_happiness_helps_us_provide_personalized_support">Understanding your happiness helps us provide personalized support.</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="happy">Happy</string>
    <string name="very_happy">Very Happy</string>
    <string name="preparing_personalized_plan_for_you">Preparing personalized plan for you...</string>
    <string name="they_will_just_take_a_moment_get_ready_for_an_amazing_well_being_experience">They will just take a moment. Get ready for an amazing well-being experience.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="insights">Insights</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="how_would_you_rate_your_level_of_sleep_quality_overall">How would you rate your level of sleep quality overall?</string>
    <string name="understanding_your_sleep_quality_helps_us_provide_personalized_support">Understanding your sleep quality helps us provide personalized support.</string>
    <string name="go_to_login">Go to Login</string>
    <string name="introducing">Introducing</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="chat_with_moodifyai">Chat with MoodifyAI</string>
    <string name="talk_with_therapist">Talk with Therapist</string>
    <string name="mood_calender">Mood Calender</string>
    <string name="coping_strategies">Coping Strategies</string>
    <string name="mindfulness_techniques">Mindfulness Techniques</string>
    <string name="i_feel_angry">I Feel Angry!</string>
    <string name="i_feel_happy">I Feel Happy!</string>
    <string name="i_feel_neutral">I Feel Neutral!</string>
    <string name="i_feel_sad">I Feel Sad!</string>
    <string name="i_feel_very_happy">I Feel Very Happy!</string>
    <string name="facebook_app_id">8902569636466767</string>
    <string name="fb_login_protocol_scheme">fb8902569636466767</string>
    <string name="facebook_client_token">0c730c5d278706cba1e8b3f80c66882d</string>
    <string name="notepad">Notepad</string>
    <string name="add_note">Add Notes</string>
    <string name="add_Note">Add notes</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="tips">Tips</string>
    <string name="stress_management">Stress Management</string>
    <string name="view_all">View all</string>
    <string name="mood_boost">Mood Boost</string>
    <string name="anxiety_reduction">Anxiety Reduction</string>
    <string name="personal_growth">Personal Growth</string>
    <string name="example">Example:</string>
    <string name="default_web_client_id">1095016146714-0ops6ah2c4cig8qnf4jljm6nrkfsodgm.apps.googleusercontent.com</string>
    <string name="logout_with_google">Logout with Google</string>
    <string name="quotes">Quotes</string>
    <string name="track_mood">Track Mood</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="mood_calendar">Mood Calendar</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="affirmation">Affirmations</string>
    <string name="select_role">Select Role</string>
    <string name="user">User</string>
    <string name="therapist">Therapist</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="qualification">Qualification</string>
    <string name="specialization">Specialization</string>
    <string name="dob">Date Of Birth</string>
    <string name="yoexp">Years of Experience</string>
    <string name="lang_spoken">Language Spoken</string>
    <string name="service_type">Service Type</string>
    <string name="session_duration">Session Duration</string>
    <string name="sessionfee">Session Fee</string>
    <string name="availability">Availability</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="address">Address</string>
    <string name="bio">Short Bio (Optional)</string>
    <string name="id_proof_f">ID Proof (Front)</string>
    <string name="id_proof_b">ID Proof (Back)</string>
    <string name="field">Field of Study</string>
    <string name="Meditation">Meditation</string>
    <string name="meditationTitle">Intro to Meditation</string>
    <string name="meditationSubTitle">8m 25s</string>
    <string name="MeditationMainText">Meditation is a journey inward, and it all begins with this gentle introduction. In \"Intro to Meditation,\" you’ll learn the foundational techniques to cultivate mindfulness and presence.\n\nThis session offers a serene space to explore breath awareness, body relaxation, and simple visualization. Whether you\'re new to meditation or seeking to deepen your practice, this guided experience is a perfect starting point.</string>
    <string name="Start">Start</string>
    <string name="breathingTitle">Deep Breath Dynamics</string>
    <string name="breathingSubTitle">2 - 5 mins</string>
    <string name="text4Min">4 mins</string>
    <string name="text3Min">3 mins</string>
    <string name="text2Min">2 mins</string>
    <string name="text5Min">5 mins</string>
    <string name="textCustomMin">Custom</string>
</resources>