<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".deep_breathing.DeepBreathingScreen">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:padding="4dp"
        android:src="@drawable/arrow_icon" />

    <ImageView
        android:id="@+id/img__breathing"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_breathing" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/breathingTitle"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/breathingSubTitle"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/btn234mins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2min"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_buttons"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text2Min"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3min"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_buttons"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text3Min"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4min"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/bg_buttons"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text4Min"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:id="@+id/btn5custommin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_5min"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_buttons"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/text5Min"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_customMin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_buttons"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/textCustomMin"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_lets_start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/Start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>