<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".GetStartedScreen">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:progressDrawable="@drawable/progress_bar_gradient"
                android:visibility="gone" />

        </FrameLayout>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/lets_started"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/lets_dive_it"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/social_media_links_bg"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:padding="5dp"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/continue_google"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/light_grey"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/olive_green"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/privacy_policy"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="@color/dark_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/terms_service"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>