<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".auth.RegisterScreen">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:src="@drawable/arrow_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="@string/forget_password_text"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="2dp"
                    android:src="@drawable/key" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/forget_password_text1"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/forget_password_text2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edt_bg"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/urbanist_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/mid_grey"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/forget_password_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>