<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rl_main"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/preparing_personalized_plan_for_you"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="27sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/please_wait"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp">

                <ProgressBar
                    android:id="@+id/circularProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress" />

                <TextView
                    android:id="@+id/progressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/urbanist_bold"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/urbanist_regular"
                android:text="@string/they_will_just_take_a_moment_get_ready_for_an_amazing_well_being_experience"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>